add old gc settings back